# deepagents-quickstarts

deep_research/: .env.example  Dockerfile  README.md  agent.py  agent_law.py  agent_notebook.py  buildmx.sh  langgraph.json  pyproject.toml  utils.py
deep_research/law_agent/: __init__.py  middlewares.py  prompts.py  tools.py
deep_research/notebook_agent/: middlewares.py  prompts.py
deep_research/research_agent/: __init__.py  backend_factory.py  memory_paths.py  middlewares.py  prompts.py  runtime_metadata.py  tools.py
deep_research/test/: async_example.py  stream_consumer_example.py  verify_config.py
